@@ -163,9 +163,8 @@ class LegacyList:
 			LogEvent(INFO, self.session.jabberID)
 			if nick and self.xdbcontacts[contact.lower()].get('nickname','') != nick:
 				self.xdbcontacts[contact.lower()]['nickname'] = nick
-				c.updateNickname(nick.encode("utf-8", 'replace'), push=True)
-				#c.updateNickname(nick, push=True)
-				self.session.sendRosterImport(icq2jid(contact), "subscribe", "both", nick.encode("utf-8", 'replace'))
+				c.updateNickname(nick, push=True)
+				self.session.sendRosterImport(icq2jid(contact), "subscribe", "both", nick)
 
 	def updateSSIContact(self, contact, presence="unavailable", show=None, status=None, nick=None, ipaddr=None, lanipaddr=None, lanipport=None, icqprotocol=None, url=None):
 		from glue import icq2jid
@@ -196,18 +195,16 @@ class LegacyList:
 			self.xdbcontacts[contact.lower()] = {}
 			if nick:
 				self.xdbcontacts[contact.lower()]['nickname'] = nick
-				c.updateNickname(nick.encode("utf-8", 'replace'), push=True)
-				#c.updateNickname(nick, push=True)
-				self.session.sendRosterImport(icq2jid(contact), "subscribe", "both", nick.encode("utf-8", 'replace'))
+				c.updateNickname(nick, push=True)
+				self.session.sendRosterImport(icq2jid(contact), "subscribe", "both", nick)
 			else:
 				self.session.sendRosterImport(icq2jid(contact), "subscribe", "both", contact)
 			self.session.pytrans.xdb.setListEntry("roster", self.session.jabberID, contact.lower(), payload=self.xdbcontacts[contact.lower()])
 		else:
 			if nick and self.xdbcontacts[contact.lower()].get('nickname','') != nick:
 				self.xdbcontacts[contact.lower()]['nickname'] = nick
-				c.updateNickname(nick.encode("utf-8", 'replace'), push=True)
-				#c.updateNickname(nick, push=True)
-				self.session.sendRosterImport(icq2jid(contact), "subscribe", "both", nick.encode("utf-8", 'replace'))
+				c.updateNickname(nick, push=True)
+				self.session.sendRosterImport(icq2jid(contact), "subscribe", "both", nick)
 			
 
 	def getLegacyList(self):
